--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
 			<artifactId>concurrentlinkedhashmap-lru</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.ethz.ganymed</groupId>
+			<artifactId>ganymed-ssh2</artifactId>
+			<version>build210</version>
+		</dependency>
 	</dependencies>
 </project>
