--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,10 @@
 			<artifactId>hessian</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba.platform.shared</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.9</version>
+		</dependency>
 	</dependencies>
 </project>
