--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm-all</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
