--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,10 @@
 			<artifactId>asm-all</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client</artifactId>
+			<version>1.9.0-beta</version>
+		</dependency>
 	</dependencies>
 </project>
