--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,10 @@
 			<artifactId>google-http-client</artifactId>
 			<version>1.9.0-beta</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
