--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>14.0.1</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -75,6 +75,16 @@
 			<groupId>asm</groupId>
 			<artifactId>asm-all</artifactId>
 			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.taobao.sketch</groupId>
+			<artifactId>sketch-webx3</artifactId>
+			<version>4.4.6-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.taobao.sketch</groupId>
+			<artifactId>sketch-framework</artifactId>
+			<version>4.4.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
