--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,10 @@
 			<artifactId>sketch-framework</artifactId>
 			<version>4.4.6-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.8</version>
+		</dependency>
 	</dependencies>
 </project>
