--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,10 @@
 			<artifactId>lombok</artifactId>
 			<version>0.11.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 	</dependencies>
 </project>
