--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<name>java</name>
 	<url>http://maven.apache.org</url>
- 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -85,6 +85,11 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-artifact</artifactId>
 			<version>3.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.htmlparser</groupId>
+			<artifactId>htmlparser</artifactId>
+			<version>1.6</version>
 		</dependency>
 	</dependencies>
 </project>
