--- a/pom.xml
+++ b/pom.xml
@@ -117,9 +117,9 @@
 			<version>0.12.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.alibaba.platform.shared</groupId>
+			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.1.9</version>
+			<version>1.1.30</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -130,6 +130,11 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.174</version>
 		</dependency>
 	</dependencies>
 </project>
