--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,10 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.174</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>7.0.42</version>
+		</dependency>
 	</dependencies>
 </project>
