--- a/pom.xml
+++ b/pom.xml
@@ -145,5 +145,10 @@
 			<artifactId>UserAgentUtils</artifactId>
 			<version>1.12</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.17.Final</version>
+		</dependency>
 	</dependencies>
 </project>
